@@ -4,9 +4,11 @@ server:
 	target-fetch-policy: "0 0 0 0 0"
 	qname-minimisation: no
 	access-control: 192.0.0.0/8 allow
+	access-control: 193.0.0.0/8 allow
 	define-tag: "internal server"
 	access-control-tag: 192.0.0.0/8 "internal"
 	access-control-tag: 127.0.0.0/8 "server"
+	; 193.0.0.0/8 has no tags
 
 rpz:
 	name: "rpz.example.com."
@@ -34,6 +36,7 @@ g4b.target.a CNAME g4c.target.a.
 g4c.target.a A 1.2.3.64
 ; server for a.
 32.40.30.20.10.rpz-nsip A 1.2.3.68
+www.gotham5.a TXT "txt5"
 TEMPFILE_END
 
 stub-zone:
@@ -94,6 +97,16 @@ SECTION QUESTION
 www.gotham4.a. IN A
 SECTION ANSWER
 www.gotham4.a. IN A 1.2.3.54
+ENTRY_END
+
+ENTRY_BEGIN
+MATCH opcode qtype qname
+ADJUST copy_id
+REPLY QR NOERROR
+SECTION QUESTION
+www.gotham5.a. IN TXT
+SECTION ANSWER
+www.gotham5.a. IN TXT "gotham5"
 ENTRY_END
 RANGE_END
 
@@ -245,6 +258,24 @@ www.gotham4.a. CNAME g4.target.a.
 g4.target.a. CNAME g4b.target.a.
 g4b.target.a. CNAME g4c.target.a.
 g4c.target.a. A 1.2.3.64
+ENTRY_END
+
+; Test with zero rpz CNAMEs, no tags for the query, and so no rpz answer.
+STEP 90 QUERY ADDRESS 193.0.0.1
+ENTRY_BEGIN
+REPLY RD
+SECTION QUESTION
+www.gotham5.a.	IN	TXT
+ENTRY_END
+
+STEP 91 CHECK_ANSWER
+ENTRY_BEGIN
+MATCH all
+REPLY QR RD RA NOERROR
+SECTION QUESTION
+www.gotham5.a.	IN	TXT
+SECTION ANSWER
+www.gotham5.a. IN TXT "gotham5"
 ENTRY_END
 
 SCENARIO_END
